// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanded depth nested object static given initial level set to 0, should render top 2 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 1, should render top 3 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"12aba6f44026c\\">
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div>barFoo</div>
                  <span>object</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"073ba5acf896f\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"07bba5acf9ef7\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBaz</div>
                  <span>boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"ae9fe22da9a31\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"240fe113d2860\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooFoo</div>
                  <span>number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 2, should render top 4 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>bar</div>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"12aba6f44026c\\">
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div>barFoo</div>
                  <span>object</span>
                </div>
              </div>
            </div>
          </div>
          <div data-level=\\"2\\">
            <div data-id=\\"d768172596c01\\">
              <div></div>
              <div>
                <div>
                  <div>
                    <div>barFooBar</div>
                    <span>object</span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"073ba5acf896f\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"07bba5acf9ef7\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>barBaz</div>
                  <span>boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"ae9fe22da9a31\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooBar</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"240fe113d2860\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>fooFoo</div>
                  <span>number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(any of)</div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"4a8da9be0aedc\\">
          <div>
            <div>
              <div>
                <div>type</div>
                <span>string</span>
              </div>
              <div></div>
              <span>required</span>
            </div>
            <div>
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"e2533efaa39da\\">
          <div>
            <div>
              <div>
                <div>enabled</div>
                <span>boolean</span>
              </div>
            </div>
            <div style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div data-id=\\"bd5c934660dce\\">
          <div>
            <div>
              <div>
                <div>root</div>
                <span>boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b0aa37b59ceff\\">
          <div>
            <div>
              <div>
                <div>group</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b6d786a9b103c\\">
          <div>
            <div>
              <div>
                <div>expirationDate</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given array with oneOf containing items, should merge it correctly 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          array[string]
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given complex type that includes array and complex array subtype, should not ignore subtype 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"231c8499288a6\\">
          <div>
            <div>
              <div>
                <div>items</div>
                <div>
                  <span>null</span>
                  <span>or</span>
                  <span>array[string or number]</span>
                </div>
              </div>
            </div>
            <div style=\\"font-size: 12px\\">
              <p>
                This description can be long and should truncate once it reaches the end of the row. If it's not
                truncating then theres and issue that needs to be fixed. Help!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given multiple object and string type, should process properties 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"2a0059431a56c\\">
          <div>
            <div>
              <div>
                <div>ids</div>
                <span>array[integer]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"4a8da9be0aedc\\">
          <div>
            <div>
              <div>
                <div>type</div>
                <span>string</span>
              </div>
              <div></div>
              <span>required</span>
            </div>
            <div>
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"e2533efaa39da\\">
          <div>
            <div>
              <div>
                <div>enabled</div>
                <span>boolean</span>
              </div>
            </div>
            <div style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div data-id=\\"bd5c934660dce\\">
          <div>
            <div>
              <div>
                <div>root</div>
                <span>boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b0aa37b59ceff\\">
          <div>
            <div>
              <div>
                <div>group</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b6d786a9b103c\\">
          <div>
            <div>
              <div>
                <div>expirationDate</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given read mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"f19a0161d8b16\\">
          <div>
            <div>
              <div>
                <div>id</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given standalone mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"f19a0161d8b16\\">
          <div>
            <div>
              <div>
                <div>id</div>
                <span>string</span>
              </div>
              <div></div>
              <span>read-only</span>
            </div>
          </div>
        </div>
        <div data-id=\\"78328d924d5b6\\">
          <div>
            <div>
              <div>
                <div>description</div>
                <span>string</span>
              </div>
              <div></div>
              <span>write-only</span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given visible $ref node, should try to inject the title immediately 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>foo</div>
                <span>User</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"c098fbf9b1d2f\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div>name</div>
                  <span>string</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"621e12cb0db5c\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div>user</div>
                <span>User</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given write mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span>string</span>
                <span>or</span>
                <span>object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"78328d924d5b6\\">
          <div>
            <div>
              <div>
                <div>description</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output top level descriptions should not render top-level description when skipTopLevelDescription=true 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div>
                <div>foo</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"3d3ab69efb5e7\\">
          <div>
            <div>
              <div>
                <div>baz</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output top level descriptions should render top-level description on allOf 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div style=\\"font-size: 12px\\"><p>This is a description that should be rendered</p></div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\">
          <div>
            <div>
              <div>
                <div>foo</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"3d3ab69efb5e7\\">
          <div>
            <div>
              <div>
                <div>baz</div>
                <span>string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
